--- a/src/sections/Footer/FooterStyle.css
+++ b/src/sections/Footer/FooterStyle.css
@@ -2,7 +2,7 @@ footer{
     margin-top: auto;
     color: black;
     background-color: rgb(220, 220, 220);
-    padding: 2.5rem 0;
+    padding-bottom: 2.5rem;
 }
 footer > div{
     text-align: center;
@@ -13,30 +13,14 @@ footer h4{
 footer .personal{
     display: inline-block;
     border-bottom: 0.05rem solid black;
-    padding: 1rem;
-    padding-top: 0;
+    padding: 0.5rem 1rem;
+    margin-bottom: 0.5rem;
+}
+footer p{
+    margin: 0;
 }
 footer .social{
-    padding-top: 1rem;
+    padding-top: .5rem;
     display: flex;
     justify-content: space-around;
-}
-footer ul {
-    display: flex;
-    padding: 0;
-}
-footer li{
-    list-style: none;
-}
-footer a{
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 1rem;
-    color: black;
-    margin: 0 0.5rem;
-    padding: 0.5rem 1rem;
-    background-color: rgb(200, 200, 200);
-}
-footer a:hover {
-    background-color: rgb(185, 185, 185);
 }
