--- a/src/sections/Main/Stages/Search/SearchStyle.css
+++ b/src/sections/Main/Stages/Search/SearchStyle.css
@@ -16,8 +16,11 @@
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+    position: relative;
+    overflow: hidden;
 }
 .quizRow div {
+    z-index: 2;
     pointer-events: none;
 }
 .quizRow p{
@@ -36,4 +39,18 @@
 .searchBar label{
     -webkit-user-select: none;
     user-select: none; 
+}
+.ripple{
+    position: absolute;
+    animation: rippleEffect 400ms ease forwards;
+    z-index: 1;
+    width: 0;
+    transform: translate(-50%, -50%);
+    aspect-ratio: 1/1;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+}
+@keyframes rippleEffect {
+    from { width: 0;}
+    to {width: 50%; opacity: 0;}
 }
