--- a/src/sections/Main/MainStyle.css
+++ b/src/sections/Main/MainStyle.css
@@ -1,5 +1,5 @@
 .Main{
-    margin: 1rem auto;
+    margin: 0 auto;
     background-color: white !important;
     padding: 1rem;
     min-width: min(80%, 25rem);
@@ -7,4 +7,14 @@
     border-radius: 1rem;
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.05);
     height: fit-content;
+}
+@media only screen and (max-width: 30rem) {
+    .Main {
+        display: flex;
+        border-radius: 0;
+        margin: 0;
+        flex-grow: 1;
+        flex-direction: column;
+        justify-content: space-around;
+    }
 }
