--- a/src/sections/Main/MainStyle.css
+++ b/src/sections/Main/MainStyle.css
@@ -1,5 +1,5 @@
 .Main{
-    margin: 0 auto;
+    margin: 2rem auto;
     background-color: white !important;
     padding: 1rem;
     min-width: min(80%, 30rem);
