--- a/src/sections/Main/Stages/Start/StartStyle.css
+++ b/src/sections/Main/Stages/Start/StartStyle.css
@@ -7,6 +7,14 @@
 }
 .showQuestion p{
     border-bottom: 0.05rem solid rgb(0, 0, 0);
+    text-align: left;
+}
+.showQuestion .notInteractable {
+    pointer-events: none;
+}
+.showQuestion .selectedResult {
+    border-radius: .5rem;
+    margin: 0;
 }
 .quizNavButtons{
     margin-top: 1rem;
@@ -26,6 +34,13 @@
 }
 .ShowResults{
     text-align: center;
+}
+.ShowResults .questionButtons{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 1rem 0;
+    gap: .5rem;
 }
 .show{
     display: block;
